--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
 </head>
 <body>
+    <img src="/image/logo.jpg"/>
+
+    <div>
+        <input type="text" placeholder="Search DailySmarty">
+        <p>Press return to search</p>
+    </div>
+
+    <div>
+    <div>
+        Recent Posts
+    </div>
+
+    <div>
+        <div>
+        Guide to rendering points on a Google Map
+        <div>
+            JavaScript
+        </div>
+        </div>
+        <div>
+        Guide to rendering points on a Google Map
+        <div>
+            JavaScript
+        </div>
+        </div>
+        <div>
+        Guide to rendering points on a Google Map
+        <div>
+            JavaScript
+        </div>
+        </div>
+    </div>
+    </div>
     
 </body>
 </html>
